Minor edits and corrections to Quad focusing lab

--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -44,23 +44,25 @@
     "|  Quadrupole length | $L_{quad}$$=0.5$ m |\n",
     "\n",
     "\n",
-    "A) Open simulation “FODObeamline.” \n",
-    "> https://www.sirepo.com/elegant#/source/NYrwE02y\n",
+    "1. Open simulation “FODObeamline.” \n",
+    "> https://www.sirepo.com/elegant#/source/NYrwE02y \n",
     "\n",
-    "You will be prompted to open a copy of the simulation in your own Sirepo workspace. If this is your first time logging into Sirepo on your computer, you will first be asked to verify through email. After you've saved a copy, you can view all simulations in your workspace at https://www.sirepo.com/elegant.\n",
+    "    You will be prompted to open a copy of the simulation in your own Sirepo workspace. If this is your first time logging into Sirepo on your computer, you will first be asked to verify through email. After you've saved a copy, you can view all simulations in your workspace at https://www.sirepo.com/elegant.\n",
+    "    \n",
+    "    This simulates a simple beamline composed of a sequence of FODO cells: \n",
+    "    - Focusing Quad \n",
+    "    - Drift \n",
+    "    - Defocusing Quad \n",
+    "    - Drift\n",
     "\n",
-    "This simulates a simple beamline composed of a sequence of FODO cells: \n",
-    "- Focusing Quad \n",
-    "- Drift \n",
-    "- Defocusing Quad \n",
-    "- Drift\n",
+    "  This simulation uses a matrix representation of all elements to propagate the Twiss parameters $\\beta_x$, $\\beta_y$, $\\alpha_x$, $\\alpha_y$, as well as propagate orbits for a collection of particles that represent the beam distribution. We’re using 5000 particles to represent the beam. \n",
     "\n",
-    "This simulation uses a matrix representation of all elements to propagate the Twiss parameters $\\beta_x$, $\\beta_y$, $\\alpha_x$, $\\alpha_y$, as well as propagate orbits for a collection of particles that represent the beam distribution. We’re using 5000 particles to represent the beam. \n",
     "\n",
-    "B) At the top of the page, click the \"Control\" tab, and look at the options.\n",
-    "- The “twiss_output” module controls calculation of the Twiss parameters.\n",
-    "- The “bunched_beam” module tells Elegant to generate a beam. \n",
-    "- The “track” module tells Elegant to track it through the lattice. \n",
+    "2. At the top of the page, click the \"Control\" tab, and look at the options. \n",
+    "\n",
+    "  - The “twiss_output” module controls calculation of the Twiss parameters.\n",
+    "  - The “bunched_beam” module tells Elegant to generate a beam. \n",
+    "  - The “track” module tells Elegant to track it through the lattice. \n",
     "\n",
     "----"
    ]
@@ -75,6 +77,7 @@
     "Initially, the lattice functions are unmatched. We start with $\\beta_x = \\beta_y =$ 4 m, $\\alpha_x = \\alpha_y = 0$ mid-cell (between quadrupoles). \n",
     "\n",
     "Under the “Visualization” Tab: \n",
+    "- Select \"FODOcell\" in the Beamline dropdown menu of the Simulation Status window.\n",
     "- Run the simulation by selecting “Start New Simulation.”\n",
     "- Scroll down to find the twiss “twiss_output”. You should see that the lattice functions $\\beta_x$, $\\beta_y$ propagated from the initial conditions are “unmatched\", i.e. the solutions are not periodic. \n",
     "- Similarly, look at the “sigma_output” plot. You should see that the RMS beam sizes S_x,S_y resemble $\\beta_x$, $\\beta_y$ but at a smaller, millimeter-level scale.\n"
@@ -250,9 +253,11 @@
     "\n",
     "We will initialize our beam with a 10% mismatch and examine the effect this has on transport.  \n",
     "The previous visualization gave a periodic solution with $\\beta_x = \\beta_y = 7.206$ meters and $\\alpha_x = -\\alpha_y = -1.146$. \n",
-    "- You can verify $\\beta$ and $\\alpha$ by interacting with the twiss_output plot (or downloading and viewing the data in CSV format).\n",
+    "- You can verify $\\beta$ and $\\alpha$ by interacting with the twiss_output plot (or downloading and viewing the data in CSV format). \n",
     "\n",
-    "Under the “Control” Tab and “twiss_output” module: \n",
+    "Under the “Control” Tab and “bunched_beam” module: \\\n",
+    "Note: this setting takes precedence over the Twiss function values specified in the \"twiss_output\" module in the \"Commands\" list.\n",
+    "\n",
     "- Initialize a mismatched beam, by setting the following fields:\n",
     "\n",
     "| Parameter  | Value  |   \n",
@@ -293,16 +298,17 @@
     "\n",
     "Predict what effect you expect the weaker focusing will have on the matched solution. Will the average beam size along the cell get larger or smaller? Will the aspect ratio between $\\sigma_x$ and $\\sigma_y$ inside the quadrupoles get larger or smaller?\n",
     "\n",
-    "1) Construct a new FODO cell with weaker focusing.\\\n",
+    "1. Construct a new FODO cell with weaker focusing.\\\n",
     "Under the \"Lattice\" tab \"Beamlines\" box click \"New Beamline.\" We will name this new cell \"FODOcell2.\"\n",
     "\\\n",
     "Make \"FODOcell2\" identical to \"FODOcell\" except with change $|k1|=0.6 m^{-2}$ to $|k1|=0.2 m^{-2}$ for both quadrupoles.\n",
     "\\\n",
     "<font color='red'> Important: Do not edit \"FODOcell\" or the quads \"QD\" or \"QF.\"</font> \\\n",
     "In addition to a new beamline, make new quads under \"Beamline Elements\" to use in your new cell.\\\n",
-    "You can re-use the drift elements. \n",
+    "You can re-use the drift elements. \\\n",
+    "Hint: you can create \"FODOcell2\" and new quads by making copies of \"FODOcell\" and the existing quads with new names and modifying the parameters of the copies.\n",
     "\n",
-    "2) Simulate bunch evolution through \"FODOcell2\" \\\n",
+    "2. Simulate bunch evolution through \"FODOcell2\" \\\n",
     "Ask Elegant to calculate the matched beam: \"Control\" tab, \"twiss_output\" command, Page 1, set \"Matched\"=Yes.\\\n",
     "Make sure to select \"FODOcell2\" from the dropdown menu in the \"Visualization\" tab.\n",
     "\n",
@@ -343,13 +349,13 @@
    "source": [
     "Accelerator complexes can contain many sections, where the focusing strength and quadrupole arrangement can be quite different between sections. We will consider a simplified version of this. We will first transport beam through a beamline comprised of 10 of our original \"FODOcell,\" then transition into a second line comprised of 10 weaker focusing copies of \"FODOcell2.\"  \n",
     "\n",
-    "3. Set the focusing strength in \"FODOcell2\" to be closer to (but still weaker than) the focusing in \"FODOcell.\" Set the strength of each quadrupole in \"FODOcell2\" to be $|k1|=0.5 m^{-2}$.\n",
+    "1. Set the focusing strength in \"FODOcell2\" to be closer to (but still weaker than) the focusing in \"FODOcell.\" Set the strength of each quadrupole in \"FODOcell2\" to be $|k1|=0.5 m^{-2}$.\n",
     "\n",
-    "4. Make the hybrid beamline.\\\n",
+    "2. Make the hybrid beamline.\\\n",
     "In \"FODObeamline\", first delete 10 instances of \"FODOcell.\"\\\n",
     "Then, add 10 instances of \"FODOcell2\" to the end of the beamline.\n",
     "\n",
-    "5. Simulate beam evoution through \"FODObeamline\" \\\n",
+    "3. Simulate beam evoution through \"FODObeamline\" \\\n",
     "First, Set Matched=No under the \"twiss_output\" command. \\\n",
     "Also, set the initial Twiss parameters to the matched value found for \"FODOcell\": \\\n",
     "$\\beta_x = \\beta_y = 7.206$ meters and $\\alpha_x = -\\alpha_y = -1.146$\n"
@@ -366,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Find the periodic solution for this hybrid beamline.\\\n",
+    "4. Find the periodic solution for this hybrid beamline.\\\n",
     "Let Elegant do this for you by setting Matched=Yes and re-running the simulation."
    ]
   },
@@ -379,7 +385,7 @@
     "Does there exist a solution that is matched for period $L=5$ m in all 20 cells?**\n",
     "\n",
     "Note that the matched solution is defined by the length over which a periodic solution is found. When accelerator scientists refer to the matched solution, it is usually implied that we mean for the shortest focusing period (e.g., the FODO cell). \\\n",
-    "Also note that the maximum $\\sigma_x$ for the matched solution from step 6 is larger than the maximum $\\sigma_x$ for both matched FODO cells found above. A strong motivation for maintaining matched beams is to keep this maximum size as small as possible during beam transport. "
+    "Also note that the maximum $\\sigma_x$ for the matched solution from step 4 is larger than the maximum $\\sigma_x$ for both matched FODO cells found above. A strong motivation for maintaining matched beams is to keep this maximum size as small as possible during beam transport. "
    ]
   },
   {
@@ -391,19 +397,20 @@
     "\n",
     "The typical strategy to transition beam between sections of the accelerator while maintaining optimal transport is to add a matching section. This section contains quadrupoles whose strengths are optimized to transition the output bunch parameters $\\alpha, \\beta$ from the first section into the optimal (matched) parameters for the next section. A matching section can also be used to customize the beam parameters in a specific part of the accelerator.\n",
     "\n",
-    "In this exercise, we will be designing an injection section. The beam at injection is typically round and has independent distribtions of all phase-space coordinates. You have already seen from the FODO exercises that the beam distribution everywhere inside a FODO cell is not round and/or has non-zero correlation between the spatial and angular coordinates. We need to design a beamline section that takes the particle contribution at the end of the FODO cell and transforms it into a spatially round uncorrelated distribution. \n",
+    "In this exercise, we will be designing an injection section. The beam at injection is typically round and has independent distribtions of all phase-space coordinates. You have already seen from the FODO exercises that the beam distribution everywhere inside a FODO cell is not round and/or has non-zero correlation between the spatial and angular coordinates. We need to design a beamline section that takes the particle distribution at the end of the FODO cell and transforms it into a spatially round uncorrelated distribution. \n",
     "\n",
     "Open simulation “fodo2roundmatch.” Copy it to your own session (there should be a prompt).\n",
     "> https://www.sirepo.com/elegant#/source/3fEOObZi\n",
     "\n",
-    "In the \"Source\" tab:\n",
+    "In the \"bunched_beam\" module under the \"Control\" tab:\n",
     "- Set Twiss $\\beta_{x,y}$ and $\\alpha_{x,y}$ to those at the end of the FODO cell.\n",
-    "Note: this setting takes precedence over the Twiss function values specified in the \"twiss_output\" module under the \"Commands\" tab.\n",
+    "Note: this setting takes precedence over the Twiss function values specified in the \"twiss_output\" module in the \"Commands\" list.\n",
     "\n",
     "Under “Lattice” tab: Edit the \"MATCHsection\" beamline. \n",
-    "- Define 4 new quadrupoles with the same dimensions as the FODO quads.\n",
-    "- Construct a section consisting of the 4 new quadrupoles with unique names with the same spacing between them as in the FODO lattice. Put a 1 m drift before the first quad and a 2 m drift after the last one.\n",
-    "- When defining the new quads assign initial guesses for their strength to be the same as the FODO quad strengths. When setting the positive or negative sign of the strengths, maintain the same alternating patter as in the FODO cell.\n",
+    "- Define 4 new quadrupoles with unique names of the same lengths as the FODO quads. \n",
+    "- Construct a section consisting of the 4 new quadrupoles with the same spacing between them as in the FODO lattice. Use a 1 m drift before the first quad and a 2 m drift after the last one.\n",
+    "- When defining the new quads, assign initial guesses for their strength to be the same as the FODO quad strengths. When setting the positive or negative sign of the strengths, maintain the same alternating pattern as in the FODO cell.\n",
+    "- Define and insert a \"MARK\" elements at the end of the section\n",
     "\n",
     "Switch to the “Control” tab:  \n",
     "- Add the strengths of quads 2-4 as \"optimization_variable\" following the example setup for quad 1 (QM1) \n",
@@ -418,17 +425,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q1) Attach graphs of the input and output xx' distributions.**\n",
+    "**Q11) Attach graphs of the input and output xx' distributions.**\n",
     "\n",
-    "**Q2) Attach graphs of $\\beta_{x,y}$ before and after optimization.**\n",
+    "**Q12) Attach graphs of $\\beta_{x,y}$ before and after optimization.**\n",
     "\n",
-    "**Q3) What are the final values of $\\beta_{x,y}$ at the end of \"MATCHsection\"?**\n",
+    "**Q13) What are the final values of $\\beta_{x,y}$ at the end of \"MATCHsection\"?**\n",
     "- Hint: you can click on the curves in the graphs under the \"Visualization\" tab and look up the values or examine the elegant log file.\n",
     "\n",
-    "**Q4) What are the final strengths of the quads in \"MATCHsection\"?**\n",
+    "**Q14) What are the final strengths of the quads in \"MATCHsection\"?**\n",
     "- Hint: you can click on the curves in the graphs under the \"Visualization\" tab and look up the values or examine the elegant log file.\n",
     "\n",
-    "**Q5) (Extra credit) Design an entire injection insertion and show the resulting optics.**\n",
+    "**Q15) (Extra credit) Design an entire injection insertion and show the resulting optics.**\n",
     "- Add a reversed version of \"MATCHsection\" at the end of the \"injsection\" beamline under the \"Lattice\" tab and rerun the simulation under the \"Visualization\" tab.\n",
     "1. Switch to the \"Lattice\" tab, hover your mouse over the \"injsection\" beamline and click \"edit\".\n",
     "2. The beam line consists of two other lines \"FODOcell\" and \"MATCHsection\". You can see their elements by examining them in the beamline list or by right-clicking on them in the \"Beamline Editor\" window and selecting \"Unpack\".\n",
@@ -447,7 +454,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -461,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
