--- a/Longitudinal-Dynamics.ipynb
+++ b/Longitudinal-Dynamics.ipynb
@@ -842,7 +842,7 @@
     "- In the left plot, note how the particle’s phase space trajectory follows the synchronous phase as it moves from 0 to 30 degrees. \n",
     "- In the right plot, note how the area encompassed by the particle's orbit in phase space (the ellipse) increases dramatically as a result of the fast ramp.\n",
     "\n",
-    "- In general, if the motion is to be adiabatic, then the system parameters must change much more slowly than the period of the motion. **Make a prediction on how many turns are needed based on your answer to Q12.**\n",
+    "- In general, if the motion is to be adiabatic, then the system parameters must change much more slowly than the period of the motion. **Make a prediction on how many turns are needed based on your answer to Q18.**\n",
     "\n",
     "- **Gradually increase the ramp time to find an adiabatic conditon.** Start with steps of ~100 turns.\n",
     "\n",
@@ -863,9 +863,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "py3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -877,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
