a couple of clarifications

--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -426,14 +426,17 @@
    "metadata": {},
    "source": [
     "**Q11) Attach graphs of the input and output xx' distributions.**\n",
+    "- Hint: the graphs can be found under the \"Source\" and \"Visualization\" tabs. \n",
+    "- Hint: you can save the graphs and insert them into your solution notebook following the example of how the USPAS logo image is embedded into this notebook.\n",
     "\n",
     "**Q12) Attach graphs of $\\beta_{x,y}$ before and after optimization.**\n",
+    "- Hint: the graphs can be found under the \"Visualization\" tab.\n",
     "\n",
     "**Q13) What are the final values of $\\beta_{x,y}$ at the end of \"MATCHsection\"?**\n",
-    "- Hint: you can click on the curves in the graphs under the \"Visualization\" tab and look up the values or examine the elegant log file.\n",
+    "- Hint: you can click on the curves in the graphs under the \"Visualization\" tab and look up the values or examine the Elegant log file in the \"Simulation Status\" section of the tab.\n",
     "\n",
-    "**Q14) What are the final strengths of the quads in \"MATCHsection\"?**\n",
-    "- Hint: you can click on the curves in the graphs under the \"Visualization\" tab and look up the values or examine the elegant log file.\n",
+    "**Q14) What are the optimized strengths of the quads in \"MATCHsection\"?**\n",
+    "- Hint: examine \"save_lattice.filename.lte\" available from the \"File\" dropdown menu of the \"Output Parameters\" section under the \"Visualization\" tab or the Elegant log file in the \"Simulation Status\" section of the tab.\n",
     "\n",
     "**Q15) (Extra credit) Design an entire injection insertion and show the resulting optics.**\n",
     "- Add a reversed version of \"MATCHsection\" at the end of the \"injsection\" beamline under the \"Lattice\" tab and rerun the simulation under the \"Visualization\" tab.\n",
