--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -410,11 +410,11 @@
     "- Define 4 new quadrupoles with unique names of the same lengths as the FODO quads. \n",
     "- Construct a section consisting of the 4 new quadrupoles with the same spacing between them as in the FODO lattice. Use a 1 m drift before the first quad and a 2 m drift after the last one.\n",
     "- When defining the new quads, assign initial guesses for their strength to be the same as the FODO quad strengths. When setting the positive or negative sign of the strengths, maintain the same alternating pattern as in the FODO cell.\n",
-    "- Define and insert a \"MARK\" elements at the end of the section\n",
+    "- Define and insert a \"MARK\" element at the end of the section\n",
     "\n",
     "Switch to the “Control” tab:  \n",
-    "- Add the strengths of quads 2-4 as \"optimization_variable\" following the example setup for quad 1 (QM1) \n",
-    "- Assuming that the horizontal and vertical emittances of the injected beam are equal, we would like to have equal horizontal and vertical beta functions at the end of the matching section: $\\beta_x = \\beta_y$. To have no correlation between the spatial and angular coordinates, the Twiss alpha functions have to be zero at the end of the section: $\\alpha_x = 0$ and $\\alpha_y =0$. Add the $\\beta_x = \\beta_y$ and $\\alpha_y =0$ constraints as \"optimization_term\"s following the example of that for $\\alpha_x = 0$.\n",
+    "- Add the strengths of quads 2-4 as \"optimization_variable\" following the example setup for quad 1. The example assumes that the first quadrupoles is named \"QM1\". \n",
+    "- Assuming that the horizontal and vertical emittances of the injected beam are equal, we would like to have equal horizontal and vertical beta functions at the end of the matching section: $\\beta_x = \\beta_y$. To have no correlation between the spatial and angular coordinates, the Twiss alpha functions have to be zero at the end of the section: $\\alpha_x = 0$ and $\\alpha_y =0$. Add the $\\beta_x = \\beta_y$ and $\\alpha_y =0$ constraints as \"optimization_term\"s following the example of that for $\\alpha_x = 0$. The axample assumes that the \"MARK\" element at the end of \"MATCHsection\" is named \"M1\".\n",
     "\n",
     "Under “Visualization” tab:\n",
     "- Make sure to select \"MATCHsection\" in the \"Beamline\" menu.\n",
@@ -430,13 +430,13 @@
     "- Hint: you can save the graphs and insert them into your solution notebook following the example of how the USPAS logo image is embedded into this notebook.\n",
     "\n",
     "**Q12) Attach graphs of $\\beta_{x,y}$ before and after optimization.**\n",
-    "- Hint: the graphs can be found under the \"Visualization\" tab.\n",
+    "- Hint: the graphs can be found under the \"Visualization\" tab in the \"twiss_output\" and \"twiss_output2\" windows.\n",
     "\n",
     "**Q13) What are the final values of $\\beta_{x,y}$ at the end of \"MATCHsection\"?**\n",
     "- Hint: you can click on the curves in the graphs under the \"Visualization\" tab and look up the values or examine the Elegant log file in the \"Simulation Status\" section of the tab.\n",
     "\n",
     "**Q14) What are the optimized strengths of the quads in \"MATCHsection\"?**\n",
-    "- Hint: examine \"save_lattice.filename.lte\" available from the \"File\" dropdown menu of the \"Output Parameters\" section under the \"Visualization\" tab or the Elegant log file in the \"Simulation Status\" section of the tab.\n",
+    "- Hint: examine \"save_lattice.filename.lte\" available from the \"File\" dropdown menu of the \"Output Parameters\" window under the \"Visualization\" tab or the Elegant log file in the \"Simulation Status\" window of the tab.\n",
     "\n",
     "**Q15) (Extra credit) Design an entire injection insertion and show the resulting optics.**\n",
     "- Add a reversed version of \"MATCHsection\" at the end of the \"injsection\" beamline under the \"Lattice\" tab and rerun the simulation under the \"Visualization\" tab.\n",
@@ -459,7 +459,7 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "py3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -471,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
