--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -406,10 +406,12 @@
     "- Set Twiss $\\beta_{x,y}$ and $\\alpha_{x,y}$ to those at the end of the FODO cell.\n",
     "Note: this setting takes precedence over the Twiss function values specified in the \"twiss_output\" module in the \"Commands\" list.\n",
     "\n",
-    "Under “Lattice” tab: Edit the \"MATCHsection\" beamline. \n",
-    "- Define 4 new quadrupoles with unique names of the same lengths as the FODO quads. \n",
-    "- Construct a section consisting of the 4 new quadrupoles with the same spacing between them as in the FODO lattice. Use a 1 m drift before the first quad and a 2 m drift after the last one.\n",
-    "- When defining the new quads, assign initial guesses for their strength to be the same as the FODO quad strengths. When setting the positive or negative sign of the strengths, maintain the same alternating pattern as in the FODO cell.\n",
+    "Under “Lattice” tab, construct a matching section\n",
+    "- Click \"+ New Beamline\" in the \"Beamlines\" window and create a new beamline named \"MATCHsection\". \n",
+    "- Define 4 new quadrupoles with unique names \n",
+    "  - Use the same length as the FODO quads. \n",
+    "  - Use the same initial strengths as of the FODO quads alternating the strength signs in the \"+-+-\" pattern.\n",
+    "- Add drifts and the 4 new quadrupoles to \"MATCHsection\" starting with a 1 m drift and continuing with the quadrupoles each followed by a 2 m drift including the last one. Make sure to maintain the \"+-+-\" alternating pattern of the quadrupole strengths in the lattice.\n",
     "- Define and insert a \"MARK\" element at the end of the section\n",
     "\n",
     "Switch to the “Control” tab:  \n",
