fixing minor inconsistencies

--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -407,10 +407,10 @@
     "Note: this setting takes precedence over the Twiss function values specified in the \"twiss_output\" module in the \"Commands\" list.\n",
     "\n",
     "Under “Lattice” tab, construct a matching section\n",
-    "- Click \"+ New Beamline\" in the \"Beamlines\" window and create a new beamline named \"MATCHsection\". \n",
     "- Define 4 new quadrupoles with unique names \n",
     "  - Use the same length as the FODO quads. \n",
     "  - Use the same initial strengths as of the FODO quads alternating the strength signs in the \"+-+-\" pattern.\n",
+    "- Hover your mouse over the  in the \"MATCHsection\" beamline in the \"Beamlines\" window and click \"Edit\". \n",
     "- Add drifts and the 4 new quadrupoles to \"MATCHsection\" starting with a 1 m drift and continuing with the quadrupoles each followed by a 2 m drift including the last one. Make sure to maintain the \"+-+-\" alternating pattern of the quadrupole strengths in the lattice.\n",
     "- Define and insert a \"MARK\" element at the end of the section\n",
     "\n",
@@ -442,7 +442,7 @@
     "\n",
     "**Q15) (Extra credit) Design an entire injection insertion and show the resulting optics.**\n",
     "- Add a reversed version of \"MATCHsection\" at the end of the \"injsection\" beamline under the \"Lattice\" tab and rerun the simulation under the \"Visualization\" tab.\n",
-    "1. Switch to the \"Lattice\" tab, hover your mouse over the \"injsection\" beamline and click \"edit\".\n",
+    "1. Switch to the \"Lattice\" tab, hover your mouse over the \"injsection\" beamline and click \"Edit\".\n",
     "2. The beam line consists of two other lines \"FODOcell\" and \"MATCHsection\". You can see their elements by examining them in the beamline list or by right-clicking on them in the \"Beamline Editor\" window and selecting \"Unpack\".\n",
     "3. Add elements to \"injection\" by examining the existing sequence, flipping the order of the elements and appending them in this reversed order, e.g. you would modify a line \"A, B, C\" by sequentially adding elements \"C\", \"B\", and \"A\" to get \"A, B, C, C, B, A\". Note that drifts count as elements.\n",
     "4. Switch to the \"Visualization\" section. Under the simulation status, keep \"MATCHsection\" selected as a beamline. The command file is setup to start with that beamline and then to automatically continue on \"injsection\".\n",
