--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -416,7 +416,11 @@
     "\n",
     "Switch to the “Control” tab:  \n",
     "- Add the strengths of quads 2-4 as \"optimization_variable\" following the example setup for quad 1. The example assumes that the first quadrupoles is named \"QM1\". \n",
-    "- Assuming that the horizontal and vertical emittances of the injected beam are equal, we would like to have equal horizontal and vertical beta functions at the end of the matching section: $\\beta_x = \\beta_y$. To have no correlation between the spatial and angular coordinates, the Twiss alpha functions have to be zero at the end of the section: $\\alpha_x = 0$ and $\\alpha_y =0$. Add the $\\beta_x = \\beta_y$ and $\\alpha_y =0$ constraints as \"optimization_term\"s following the example of that for $\\alpha_x = 0$. The axample assumes that the \"MARK\" element at the end of \"MATCHsection\" is named \"M1\".\n",
+    "  - Note: make sure that the new \"optimization_variable\" definitions follow immediately after the example one.\n",
+    "- Assuming that the horizontal and vertical emittances of the injected beam are equal, we would like to have equal horizontal and vertical beta functions at the end of the matching section: $\\beta_x = \\beta_y$. To have no correlation between the spatial and angular coordinates, the Twiss alpha functions have to be zero at the end of the section: $\\alpha_x = 0$ and $\\alpha_y =0$. Add the $\\beta_x = \\beta_y$ and $\\alpha_y =0$ constraints as \"optimization_term\"s following the example of that for $\\alpha_x = 0$. The example assumes that the \"MARK\" element at the end of \"MATCHsection\" is named \"M1\".\n",
+    "  - Note: make sure that the new \"optimization_term\" definitions follow immediately after the example one.\n",
+    "  - Hint: the optimization condition is defined using Reverse Polish notation \"Argument1 Argument2... Function\".\n",
+    "  - Hint: consult Elegant manual for the meaning and syntax of the \"sene\" function.\n",
     "\n",
     "Under “Visualization” tab:\n",
     "- Make sure to select \"MATCHsection\" in the \"Beamline\" menu.\n",
