--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -408,6 +408,7 @@
     "\n",
     "Under “Lattice” tab, construct a matching section\n",
     "- Define 4 new quadrupoles with unique names \n",
+    "  - Click \"+ New Element\" in the \"Beamline Elements\" window of the \"Lattice\" tab.\n",
     "  - Use the same length as the FODO quads. \n",
     "  - Use the same initial strengths as of the FODO quads alternating the strength signs in the \"+-+-\" pattern.\n",
     "- Hover your mouse over the  in the \"MATCHsection\" beamline in the \"Beamlines\" window and click \"Edit\". \n",
