--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -255,19 +255,20 @@
     "The previous visualization gave a periodic solution with $\\beta_x = \\beta_y = 7.206$ meters and $\\alpha_x = -\\alpha_y = -1.146$. \n",
     "- You can verify $\\beta$ and $\\alpha$ by interacting with the twiss_output plot (or downloading and viewing the data in CSV format). \n",
     "\n",
-    "Under the “Control” Tab and “bunched_beam” module: \\\n",
-    "Note: this setting takes precedence over the Twiss function values specified in the \"twiss_output\" module in the \"Commands\" list.\n",
-    "\n",
-    "- Initialize a mismatched beam, by setting the following fields:\n",
+    "Under the “Control” Tab: \n",
+    "- In the \"twiss_output\" module:\n",
+    "  - Set \"Matched\" to \"No\" on page 1.\n",
+    "- In the “bunched_beam” module: \n",
+    "  - Set \"Use Twiss Command Values\" to \"No\" on page 3.\n",
+    "  - Set the centroid offset back to zero on page 5.\n",
+    "  - Initialize a mismatched beam, by setting the following fields on pages 1 and 2 (Note: this setting takes precedence over the Twiss function values specified in the \"twiss_output\" module):\n",
     "\n",
     "| Parameter  | Value  |   \n",
     "|---|---| \n",
-    "| Matched  | No |   \n",
     "|  Beta X  | 7.206 * 1.1 |  \n",
     "|  Alpha X | -1.146 |  \n",
     "|  Beta Y  | 7.206 * 1.1  |\n",
     "|  Alpha Y | 1.146 | \n",
-    "\n",
     "\n",
     "You should observe that the envelope solution is not longer periodic with the cell length (5 m), but “beats”/ oscillates about the matched, stationary solution. "
    ]
