--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -310,8 +310,11 @@
     "Hint: you can create \"FODOcell2\" and new quads by making copies of \"FODOcell\" and the existing quads with new names and modifying the parameters of the copies.\n",
     "\n",
     "2. Simulate bunch evolution through \"FODOcell2\" \\\n",
-    "Ask Elegant to calculate the matched beam: \"Control\" tab, \"twiss_output\" command, Page 1, set \"Matched\"=Yes.\\\n",
-    "Make sure to select \"FODOcell2\" from the dropdown menu in the \"Visualization\" tab.\n",
+    "Ask Elegant to calculate the matched beam: \n",
+    "  - \"Control\" tab, \"twiss_output\" command, Page 1, set \"Matched\" = \"Yes\".\n",
+    "  - \"Control\" tab, \"bunched_beam\" command, Page 3, set \"Use Twiss Command Values\" = \"No\".\n",
+    "\n",
+    "  Make sure to select \"FODOcell2\" from the dropdown menu in the \"Visualization\" tab.\n",
     "\n",
     "\n",
     "\n",
