Fixed a couple of typos

--- a/Dispersion-Chromaticity.ipynb
+++ b/Dispersion-Chromaticity.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "In contrast, the average value of Sy has decreased significantly, and there is a focusing kick at the entrance and exit. The dipole has a net focusing effect in the vertical plane. \n",
     "\n",
-    "The reason for these differences is an effect called *edge focusing*, which is caused by fringe fields that extend past the edge of the dipole. An exploration of edge focusing is beyond the scope of this lab, but it is good to aware that this is another way in which dipoles affect the lattice and beam parameters. Edge focusing is an effect which does not depend on beam energy spread. In contrast, the strength of the effects caused by dispersion and chromaticity do depend on energy spread in the particle distribution - which is mainly determined by the RF system used for acceleration.\n",
+    "The reason for these differences is an effect called *edge focusing*, which is caused by fringe fields that extend past the edge of the dipole. An exploration of edge focusing is beyond the scope of this lab, but it is good to be aware that this is another way in which dipoles affect the lattice and beam parameters. Edge focusing is an effect which does not depend on beam energy spread. In contrast, the strength of the effects caused by dispersion and chromaticity do depend on energy spread in the particle distribution - which is mainly determined by the RF system used for acceleration.\n",
     "\n",
     "#### Effect of dispersion on beam size\n",
     "\n",
@@ -211,7 +211,7 @@
     "- Make sure you select your new beamline from the drop down menu.\n",
     "\n",
     "\n",
-    "Although sections of this lattice are dispersion-free, this ring still has chromaticity. In other words, although off-momentum particles do not increase the beam size in the dispersion-free sections, they still feel a focusing strength that the *synchronous* or on-energy particle and, as a results, have a slightly different *tune*. Recall that tune is the frequency of particle oscillation around the design particle.  \n",
+    "Although sections of this lattice are dispersion-free, this ring still has chromaticity. In other words, although off-momentum particles do not increase the beam size in the dispersion-free sections, they still feel a different focusing strength than the *synchronous* or on-energy particle and, as a results, have a slightly different *tune*. Recall that tune is the frequency of particle oscillation around the design particle.  \n",
     "\n",
     "First we will calculate the tune of the on-energy particles, then calculate the spread of tune that results from momentum spread. \n"
    ]
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q11) Assuming we can tolerance resonances of order 4 and above, but cannot operate on resonances of order 3 and below, how big of a momentum spread can we tolerate in this ring?** Using the plot above, set `resonance_order=3` and plug in the values for tunes and chromaticity that you recorded above. Adjust the momentum spread `sigma_dp` until your tune spread (the black line) crosses a resonance line. Give your answer to the nearest 0.1%\n",
+    "**Q11) Assuming we can tolerate resonances of order 4 and above, but cannot operate on resonances of order 3 and below, how big of a momentum spread can we tolerate in this ring?** Using the plot above, set `resonance_order=3` and plug in the values for tunes and chromaticity that you recorded above. Adjust the momentum spread `sigma_dp` until your tune spread (the black line) crosses a resonance line. Give your answer to the nearest 0.1%\n",
     "\n"
    ]
   },
