Added a note the FITPOINT option of the MARK element in Section G)

--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -417,7 +417,7 @@
     "  - Use the same initial strengths as of the FODO quads alternating the strength signs in the \"+-+-\" pattern.\n",
     "- Hover your mouse over the  in the \"MATCHsection\" beamline in the \"Beamlines\" window and click \"Edit\". \n",
     "- Add drifts and the 4 new quadrupoles to \"MATCHsection\" starting with a 1 m drift and continuing with the quadrupoles each followed by a 2 m drift including the last one. Make sure to maintain the \"+-+-\" alternating pattern of the quadrupole strengths in the lattice.\n",
-    "- Define and insert a \"MARK\" element at the end of the section\n",
+    "- Define and insert a \"MARK\" element at the end of the section. Make sure to set the \"FITPOINT\" option in the element definition to \"YES\".\n",
     "\n",
     "Switch to the “Control” tab:  \n",
     "- Add the strengths of quads 2-4 as \"optimization_variable\" following the example setup for quad 1. The example assumes that the first quadrupoles is named \"QM1\". \n",
