--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -312,7 +312,7 @@
     "2. Simulate bunch evolution through \"FODOcell2\" \\\n",
     "Ask Elegant to calculate the matched beam: \n",
     "  - \"Control\" tab, \"twiss_output\" command, Page 1, set \"Matched\" = \"Yes\".\n",
-    "  - \"Control\" tab, \"bunched_beam\" command, Page 3, set \"Use Twiss Command Values\" = \"No\".\n",
+    "  - \"Control\" tab, \"bunched_beam\" command, Page 3, set \"Use Twiss Command Values\" = \"Yes\".\n",
     "\n",
     "  Make sure to select \"FODOcell2\" from the dropdown menu in the \"Visualization\" tab.\n",
     "\n",
