clarification update from vsmorozov

--- a/Quadrupole-Focusing.ipynb
+++ b/Quadrupole-Focusing.ipynb
@@ -361,7 +361,7 @@
     "\n",
     "3. Simulate beam evoution through \"FODObeamline\" \\\n",
     "First, Set Matched=No under the \"twiss_output\" command. \\\n",
-    "Also, set the initial Twiss parameters to the matched value found for \"FODOcell\": \\\n",
+    "Also, set the initial Twiss parameters in \"bunched_beam\" to the matched value found for \"FODOcell\": \\\n",
     "$\\beta_x = \\beta_y = 7.206$ meters and $\\alpha_x = -\\alpha_y = -1.146$\n"
    ]
   },
